name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , aeson
    , bytestring
    , common
    , ConfigFile
    , containers
    , file-embed
    , frontend
    , gerippe
    , monad-logger
    , mtl
    , mysql
    , my-palantype
    , network
    , obelisk-backend
    , obelisk-route
    , persistent
    , persistent-mysql
    , persistent-template
    , parsec
    , resource-pool
    , resourcet
    , servant
    , servant-snap
    , snap-core
    , text
    , text-show
    , unordered-containers
  exposed-modules:
      Backend
  other-modules:
      Handler
      DbAdapter
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
