name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , aeson
    , bytestring
    , common
    , ConfigFile
    , containers
    , either
    , frontend
    , gerippe
    , generic-lens
    , jose
    , lens
    , lifted-base
    , megaparsec
    , monad-control
    , monad-logger
    , monad-time
    , mtl
    , mysql
    , my-palantype
    , network
    , obelisk-backend
    , obelisk-generated-static
    , obelisk-executable-config-lookup
    , obelisk-route
    , password
    , password-instances
    , persistent >= 2.13
    , persistent-mysql
    , resource-pool
    , resourcet
    , safe
    , servant
    , servant-snap
    , snap-core
    , text
    , text-show
    , time
    , transformers
    , unordered-containers
    , utf8-string
  exposed-modules:
      Backend
  other-modules:
      AppData
    , Auth
    , Config
    , Database
    , DbAdapter
    , DbAdapter.Instances
    , DbJournal
    , Handler
    , Handler.Auth
    , Handler.Palantype
    , Handler.User
    , Handler.Event
      
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
