cabal-version: 2.2
name: backend
version: 0.1
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      base
    , aeson
    , bytestring
    , common
    , ConfigFile
    , containers
    , data-default
    , directory
    , either
    , frontend
    , gerippe
    , generic-lens
    , http-client
    , http-types
    , jose
    , lens
    , lens-aeson
    , lifted-base
    , megaparsec
    , monad-control
    , monad-logger
    , monad-time
    , mtl
    , mysql
    , my-palantype
    , network
    , obelisk-backend
    , obelisk-generated-static
    , obelisk-executable-config-lookup
    , obelisk-route
    , pandoc
    , pandoc-types
    , password
    , password-instances
    , persistent
    , persistent-mysql
    , resource-pool
    , resourcet
    , safe
    , servant
    , servant-snap
    , snap-core
    , text
    , text-show
    , time
    , transformers
    , unordered-containers
    , utf8-string
    , wreq
  exposed-modules:
      Backend
  other-modules:
      AppData
    , Auth
    , Config
    , Database
    , DbAdapter
    , DbAdapter.Instances
    , DbJournal
    , GithubApi
    , Handler
    , Handler.Admin
    , Handler.Auth
    , Handler.CMS
    , Handler.Event
    , Handler.Palantype
    , Handler.Stats
    , Handler.User
      
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
      LambdaCase
    , BlockArguments
    , OverloadedStrings
    , ScopedTypeVariables

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
