name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , containers
    , data-default
    , lens
    , keycode
    , mtl
    , my-palantype
    , obelisk-route
    , safe
    , servant
    , text
    , text-show
    , unordered-containers
  exposed-modules:
    Common.Api
    Common.Stage
    Common.PloverAdapter
    Common.Route
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
