name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , containers
    , data-default
    , either
    , http-api-data
    , lens
    , keycode
    , mtl
    , my-palantype
    , obelisk-route
    , reflex-dom
    , safe
    , servant
    , servant-reflex
    , text
    , text-show
    , time
  exposed-modules:
    Common.Api
    Common.Auth
    Common.Model
    Common.PloverAdapter
    Common.PloverConfig
    Common.Route
    Common.Stage
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
