cabal-version: 2.2
name: common
version: 1.1
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , categories
    , containers
    , data-default
    , either
    , http-api-data
    , keycode
    , lens
    , mtl
    , my-palantype
    , obelisk-route
    , pandoc-types
    , proxied
    , reflex-dom
    , safe
    , servant
    , servant-reflex
    , text
    , text-show
    , time
  exposed-modules:
    Common.Api
    Common.Auth
    Common.Model
    Common.PloverAdapter
    Common.PloverConfig
    Common.Route
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
    StrictData
