name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , bytestring
    , common
    , containers
    , data-default
    , either
    , generic-lens
    , ghcjs-dom

    -- jsaddle needed for
    -- eval
    -- liftJSM
    , jsaddle 
    , lens
    , MonadRandom
    , mtl
    , my-palantype
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , patch
    , proxied
    , random
    , random-shuffle
    , reflex-dom
    , safe
    , servant
    , servant-reflex
    , text
    , text-show
    , time
    , witherable
  exposed-modules:
    Frontend
  other-modules:
      AdminPages
    , AuthPages
    , Client
    , Home
    , LocalStorage
    , Page.Common
    , Page.Common.Exercise
    , Page.Common.Stopwatch
    , Page.Introduction
    , Page.Patterns
    , Page.Stage1
    , Page.Stage2
    , Page.Stage3
    , Page.Stage4
    , Page.Stage40.PloverCommands
    , Page.Stage40.Fingerspelling
    , Page.Stage40.NumberMode
    , Page.Stage40.CommandKeys
    , Page.Stage40.SpecialCharacters
    , Page.Stage5
    , PloverDict
    , Shared
    , State
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
      FlexibleContexts
    , RecordWildCards
    , KindSignatures
    , LambdaCase
    , ScopedTypeVariables
    , OverloadedStrings


executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , common
    , obelisk-frontend
    , obelisk-route
    , reflex-dom
    , obelisk-generated-static
    , frontend
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
