cabal-version: 2.2
name: frontend
version: 1.1
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , aeson
    , bytestring
    , common
    , containers
    , data-default
    , either
    , generic-lens
    , ghcjs-dom

    -- jsaddle needed for
    -- eval
    -- liftJSM
    , jsaddle 
    , lens
    , MonadRandom
    , mtl
    , my-palantype
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , pandoc-types
    , patch
    , proxied
    , random
    , random-shuffle
    , reflex-dom
    , reflex-dom-pandoc
    , safe
    , servant
    , servant-reflex
    , text
    , text-show
    , time
    , witherable
  exposed-modules:
    Frontend
  other-modules:
      AdminPages
    , AuthPages
    , Client
    , Home
    , LocalStorage
    , CMS
    , Page.Common
    , Page.Common.Stopwatch
    , Page.Introduction
    , Page.Patterns
    , Page.Stage1
    , Page.Stage2
    , Page.Stage14
    , Page.Stage15.PloverCommands
    , Page.Stage15.Fingerspelling
    , Page.Stage15.NumberMode
    , Page.Stage15.CommandKeys
    , Page.Stage15.SpecialCharacters
    , Page.StageGeneric
    , PageBlog
    , PageWordList
    , PloverDict
    , Shared
    , State
    , StenoInput
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
      FlexibleContexts
    , RecordWildCards
    , KindSignatures
    , LambdaCase
    , ScopedTypeVariables
    , OverloadedStrings
    , StrictData

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends:
      base
    , common
    , obelisk-frontend
    , obelisk-route
    , reflex-dom
    , obelisk-generated-static
    , frontend
  ghc-options: -threaded -O -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
